--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html>
 	<head>
 		<title>D3 Example</title>
-		<link rel="stylesheet" type="text/css" href="/stylesheets/main.css">
-		<script type="text/javascript" src="/javascript/d3.js"></script>
-		<script type="text/javascript" src="/javascript/main.js"></script>
+		<link rel="stylesheet" type="text/css" href="stylesheets/main.css">
+		<script type="text/javascript" src="javascript/d3.js"></script>
+		<script type="text/javascript" src="javascript/main.js"></script>
 	</head>
-	<body class="stuff">
+	<body>
 
 		<svg></svg>
-
+		<section></section>
 	</body>
 </html>
